adicionando subscribe ao websocket